manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp 
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 3000
