manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  namespace: dev
spec:
  rules:
  - host: nodeappinfo.devops
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nodeapp-service
              port:
                number: 3000
